chore: fix form spacing

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -2,9 +2,8 @@ body,
 input,
 textarea,
 select {
-  font-family: 'Montserrat', sans-serif
+  font-family: "Montserrat", sans-serif;
 }
-
 
 .block-render {
   @include mediaQueries(mobile) {
@@ -42,6 +41,10 @@ select {
       .partnership-form {
         .partnership-form-dekstop {
           display: none !important;
+
+          .form-control {
+            width: 100%;
+          }
         }
 
         .partnership-form-mobile {
@@ -250,36 +253,35 @@ select {
 
   .separater {
     font-weight: 700;
-    color: #646464
+    color: #646464;
   }
 
   .title {
     font-weight: 800 !important;
     font-size: 36px !important;
-    font-family: 'Poppins', sans-serif !important;
-    color: #646464
+    font-family: "Poppins", sans-serif !important;
+    color: #646464;
   }
 
   .text {
-    font-family: 'Poppins', sans-serif;
-    ;
+    font-family: "Poppins", sans-serif;
   }
 }
 
-ol, ul{
+ol,
+ul {
   padding-left: 1rem;
 }
 
-  // ul li {
-  //   margin-bottom: 1em;
-  // }
+// ul li {
+//   margin-bottom: 1em;
+// }
 ul li:last-child {
   margin-bottom: 0;
 }
 
-
 .wp-container-mobile {
-  display: none !important;;
+  display: none !important;
 }
 @include mediaQueries(mobile) {
   .wp-container-desktop {
@@ -295,5 +297,4 @@ ul li:last-child {
     flex-direction: column;
     align-items: center;
   }
- 
 }
